--- a/office.html
+++ b/office.html
@@ -2,7 +2,7 @@
   <html lang="en">
   <head>
   	<meta charset="UTF-8">
-  	<title>Awards & Recognitions</title>
+  	<title>About Offce</title>
   	<meta name="description" content="Vertexify. - Business Consulting WordPress Theme">
   	<meta name="keywords" content="accountant, advertising, adviser, business, company, consultant, consulting, corporate, finance, financial advisor, human resources, insurance, legal, marketing, multipurpose">
   	<meta name="author" content="Themexriver">
@@ -535,7 +535,7 @@
 
 <!-- Start of Breadcrumb  section
 	============================================= -->
-	<section id="vt-breadcrumb" class="vt-breadcrumb-section position-relative" data-background="assets/img/bg/award-bread.jpg">
+	<section id="vt-breadcrumb" class="vt-breadcrumb-section position-relative" data-background="assets/img/bg/office-bread.jpg">
 		<div class="vt-vertical-shape-2 txt_item_active">
 			<span></span>
 			<span></span>
@@ -546,10 +546,10 @@
 				<ul>
 					<li><a href="#">Home</a></li>
 					<li><a href="#">About</a></li>
-					<li>Awards & Recognitions</li>
+					<li>Offices</li>
 				</ul>
-				<h2 class="breadcrumb_title">Celebrating Our Corporate Awards and Recognitions Achievements</h2>
-				<p>Our company has been honored with awards for excellence, innovation, and outstanding business achievements.</p>
+				<h2 class="breadcrumb_title">Our Corporate Business Locations Worldwide</h2>
+				<p>We have offices in major cities worldwide, providing local expertise and exceptional service wherever you are.</p>
 				<div class="vt-btn mt-30 btn-spin">
 					<a href="#">Discover More</a>
 				</div>
@@ -559,231 +559,220 @@
 <!-- End of Breadcrumb  section
 	============================================= -->
 
-<!-- Start of Award  section
+<!-- Start of office feed  section
 	============================================= -->
-	<section id="vt-award" class="vt-award-section pt-115 pb-115">
+	<section id="vt-office-feed" class="vt-office-feed-section pt-120 pb-120">
 		<div class="container">
-			<div class="vt-section-title ver_2 vt-text headline pera-content">
+			<div class="vt-section-title ver_2 headline pera-content">
 				<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
-					We're an Award-Winning Agency
+					Our Global Presence
 				</div>
-				<h2 class="section_title vt-title vt-title-ani">Honoring Our Achievements: Awards and Recognitions</h2>
-				<p>Our company is proud to be recognized with prestigious awards for excellence, innovation, and leadership. These accolades reflect our commitment to delivering outstanding business solutions and driving success in our industry.</p>
+				<h2 class="section_title vt-title vt-title-ani">Global Offices: Our Corporate Business Locations Overview</h2>
+				<p>Our global network includes offices in key cities, offering localized expertise and comprehensive support tailored to each region. This strategic presence ensures we deliver exceptional service and solutions to meet diverse business needs.</p>
 			</div>
-			<div class="vt-award-content pt-55">
-				<div class="row">
-					<div class="col-lg-4">
-						<div class="vt-award-item headline pera-content">
-							<div class="item-img">
-								<img src="assets/img/about/aw1.jpg" alt="">
-							</div>
-							<div class="item-text">
-								<h3>Annual Awards 2023</h3>
-								<p>Celebrating Our Annual Awards 2023: Outstanding Achievements</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4">
-						<div class="vt-award-item headline pera-content">
-							<div class="item-img">
-								<img src="assets/img/about/aw2.jpg" alt="">
-							</div>
-							<div class="item-text">
-								<h3>Annual Awards 2022</h3>
-								<p>Celebrating Our Annual Awards for 2022 Achievements</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4">
-						<div class="vt-award-item headline pera-content">
-							<div class="item-img">
-								<img src="assets/img/about/aw3.jpg" alt="">
-							</div>
-							<div class="item-text">
-								<h3>Annual Awards 2021</h3>
-								<p>Celebrating Our Annual Awards 2021: Excellence Recognized</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4">
-						<div class="vt-award-item headline pera-content">
-							<div class="item-img">
-								<img src="assets/img/about/aw4.jpg" alt="">
-							</div>
-							<div class="item-text">
-								<h3>Annual Awards 2020</h3>
-								<p>Celebrating Our Annual Awards 2020: Excellence Recognized</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4">
-						<div class="vt-award-item headline pera-content">
-							<div class="item-img">
-								<img src="assets/img/about/aw5.jpg" alt="">
-							</div>
-							<div class="item-text">
-								<h3>Annual Awards 2019</h3>
-								<p>Celebrating Our Annual Awards 2019: Outstanding Achievements</p>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="vt-btn ver_2 btn-spin text-center">
-					<a href="#">Load More Awards</a>
-				</div>
-			</div>
-		</div>
-	</section>
-<!-- End of Award  section
-	============================================= -->
-
-<!-- Start of Award feed  section
-	============================================= -->
-	<section id="vt-award-feed" class="vt-award-feed-section pt-115 pb-115" data-background="assets/img/bg/aw-bg.png">
-		<div class="container">
-			<div class="vt-section-title ver_2 vt-text headline pera-content">
-				<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
-					We're an Award-Winning Agency
-				</div>
-				<h2 class="section_title vt-title vt-title-ani">Achievements Honored: Our Corporate Awards and Recognitions</h2>
-				<p>We are honored to have received numerous awards recognizing our excellence, innovation, and leadership in the industry. These accolades highlight our dedication to delivering outstanding business solutions and driving continuous success.</p>
-			</div>
-			<div class="vt-award-content pt-75">
+			<div class="vt-office-feed-content pt-50">
 				<div class="row justify-content-center">
 					<div class="col-lg-4">
-						<div class="vt-award-item-2">
+						<div class="vt-office-feed-item">
 							<div class="item-img">
-								<img src="assets/img/about/award1.png" alt="">
+								<img src="assets/img/about/of1.jpg" alt="">
 							</div>
-							<div class="item-text headline pera-content">
-								<h3>Annual Awards 2023</h3>	
-								<p>Celebrating Our Annual Awards 2023: Outstanding Achievements</p>					
+							<div class="item-text headline">
+								<h2>Vertexify: United States</h2>
+								<div class="item-info headline">
+									<h3>Address:</h3>
+									<span>129 9th St, Brooklyn, NY 11215, United States</span>
+								</div>
+								<div class="item-info headline">
+									<h3>Hours:</h3>
+									<span>Monday to Friday from 9:00 to 17:00</span>
+								</div>
+								<div class="item-info headline">
+									<h3>Phone:</h3>
+									<span>+1 347-335-0751</span>
+								</div>
+								<div class="item-info headline">
+									<h3>Email:</h3>
+									<span>example@email.com</span>
+								</div>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4">
-						<div class="vt-award-item-2">
+						<div class="vt-office-feed-item">
 							<div class="item-img">
-								<img src="assets/img/about/award2.png" alt="">
+								<img src="assets/img/about/of2.jpg" alt="">
 							</div>
-							<div class="item-text headline pera-content">
-								<h3>Annual Awards 2022</h3>	
-								<p>Celebrating Our Annual Awards for 2022 Achievements</p>					
+							<div class="item-text headline">
+								<h2>Vertexify: United Kingdom</h2>
+								<div class="item-info headline">
+									<h3>Address:</h3>
+									<span>Unit 19, Silver Wing Industrial Estate, Horatius Way, Croydon CR0 4RU, United Kingdom</span>
+								</div>
+								<div class="item-info headline">
+									<h3>Hours:</h3>
+									<span>Monday to Friday from 9:00 to 17:00</span>
+								</div>
+								<div class="item-info headline">
+									<h3>Phone:</h3>
+									<span>+44 20 3417 5360</span>
+								</div>
+								<div class="item-info headline">
+									<h3>Email:</h3>
+									<span>example@email.com</span>
+								</div>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4">
-						<div class="vt-award-item-2">
+						<div class="vt-office-feed-item">
 							<div class="item-img">
-								<img src="assets/img/about/award3.png" alt="">
+								<img src="assets/img/about/of3.jpg" alt="">
 							</div>
-							<div class="item-text headline pera-content">
-								<h3>Annual Awards 2021</h3>	
-								<p>Celebrating Our Annual Awards 2021: Excellence Recognized</p>					
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4">
-						<div class="vt-award-item-2">
-							<div class="item-img">
-								<img src="assets/img/about/award4.png" alt="">
-							</div>
-							<div class="item-text headline pera-content">
-								<h3>Annual Awards 2023</h3>	
-								<p>Celebrating Our Annual Awards 2023: Outstanding Achievements</p>					
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4">
-						<div class="vt-award-item-2">
-							<div class="item-img">
-								<img src="assets/img/about/award5.png" alt="">
-							</div>
-							<div class="item-text headline pera-content">
-								<h3>Annual Awards 2022</h3>	
-								<p>Celebrating Our Annual Awards for 2022 Achievements</p>					
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4">
-						<div class="vt-award-item-2">
-							<div class="item-img">
-								<img src="assets/img/about/award6.png" alt="">
-							</div>
-							<div class="item-text headline pera-content">
-								<h3>Annual Awards 2021</h3>	
-								<p>Celebrating Our Annual Awards 2021: Excellence Recognized</p>					
+							<div class="item-text headline">
+								<h2>Vertexify: Australia</h2>
+								<div class="item-info headline">
+									<h3>Address:</h3>
+									<span>30 Little La Trobe St,
+									Melbourne VIC 3000, Australia</span>
+								</div>
+								<div class="item-info headline">
+									<h3>Hours:</h3>
+									<span>Monday to Friday from 9:00 to 17:00</span>
+								</div>
+								<div class="item-info headline">
+									<h3>Phone:</h3>
+									<span>+61 3 9650 9888</span>
+								</div>
+								<div class="item-info headline">
+									<h3>Email:</h3>
+									<span>example@email.com</span>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="vt-btn ver_2 btn-spin text-center">
-					<a href="#">Load More Awards</a>
+				<div class="vt-btn ver_2 btn-spin text-center mt-20">
+					<a href="#">Load More Locations</a>
 				</div>
 			</div>
 		</div>
-	</section>			
-<!-- End of Award feed  section
+	</section>	
+<!-- End of office feed  section
 	============================================= -->
 
-<!-- Start of Client section
+<!-- Start of Contact  section
 	============================================= -->
-	<section id="vt-client" class="vt-client-section pt-105">
+	<section id="vt-contact" class="vt-contact-section pt-120 pb-120 position-relative">
+		<div class="vt-vertical-shape-2 txt_item_active">
+			<span></span>
+			<span></span>
+			<span></span>
+		</div>
+		<div class="contact-img  position-absolute">
+			<img src="assets/img/bg/contact.png" alt="">
+		</div>
 		<div class="container">
-			<div class="vt-section-title ver_2 headline text-center pera-content">
-				<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
-					Our Corporate Clients
+			<div class="vt-contact-content d-flex">
+				<div class="vt-contact-text-wrap">
+					<div class="vt-section-title headline pera-content vt-text">
+						<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
+							Contact Us
+						</div>
+						<h2 class="section_title vt-title vt-title-ani">Get in Touch with Us Today</h2>
+						<p>Our consulting services drive growth, optimize operations, and ensure strategic business success.</p>
+					</div>
+					<div class="vt-contact-partner pera-content">
+						<p>Used by leading brands and companies across the globe</p>
+						<div class="vt-contact-logo">
+							<div class="vt-contact-logo-slide swiper-container">
+								<div class="swiper-wrapper">
+									<div class="swiper-slide">
+										<div class="vt-contact-logo-img">
+											<img  src="assets/img/partner/sp8.png" alt="">
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="vt-contact-logo-img">
+											<img  src="assets/img/partner/sp3.png" alt="">
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="vt-contact-logo-img">
+											<img  src="assets/img/partner/sp4.png" alt="">
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="vt-contact-logo-img">
+											<img  src="assets/img/partner/sp2.png" alt="">
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="vt-contact-logo-img">
+											<img  src="assets/img/partner/sp1.png" alt="">
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
-				<h2 class="section_title vt-title vt-title-ani">Satisfied clients from 170+ organisations in different fields</h2>
-			</div>
-			<div class="vt-client-content d-flex flex-wrap">
-				<div class="vt-client-item d-flex justify-content-center align-items-center position-relative">
-					<div class="hover-border"></div>
-					<img class="img_1" src="assets/img/partner/sp1.png" alt="">
-					<img class="img_2 position-absolute" src="assets/img/partner/sp1.1.png" alt="">
+				<div class="vt-contact-form headline pera-content">
+					<h3 class="wow" data-splitting="" >What can we help you with? </h3>
+					<div class="vt-contact-form-area">
+						<form action="#" method="post">
+							<div class="vt-contact-form-option">
+								<label class="contact-select">
+									<input type="radio" id="age1" name="age" value="">
+									<span>Strategic Planning</span>
+								</label>
+								<label class="contact-select">
+									<input type="radio" id="age2" name="age" value="">
+									<span>Financial Consulting</span>
+								</label> 
+								<label class="contact-select">
+									<input type="radio" id="age3" name="age" value="">
+									<span>Operational Optimization</span>
+								</label>
+								<label class="contact-select">
+									<input type="radio" id="age4" name="age" value="">
+									<span>HR Development</span>
+								</label>
+								<label class="contact-select">
+									<input type="radio" id="age5" name="age" value="">
+									<span>Marketing Strategy</span>
+								</label>
+								<label class="contact-select">
+									<input type="radio" id="age6" name="age" value="">
+									<span>Technology Integration</span>
+								</label>
+							</div>
+							<div class="vt-contact-form-input">
+								<div class="input-field">
+									<label class="f-lebel text-uppercase">Name</label>
+									<input type="text" placeholder="e.g. Oliver Spiteri">
+								</div>
+								<div class="input-field">
+									<label class="f-lebel text-uppercase">Phone</label>
+									<input type="text" placeholder="e.g. +1 877 217 8371">
+								</div>
+								<div class="input-field">
+									<label class="f-lebel text-uppercase">Email</label>
+									<input type="text" placeholder="example@email.com">
+								</div>
+								<div class="input-field">
+									<label class="f-lebel text-uppercase">Message</label>
+									<textarea name="message" id="text" placeholder="Write your message here..."></textarea>
+								</div>
+							</div>
+							<button>Submit NOw</button>
+						</form>
+					</div>
 				</div>
-				<div class="vt-client-item d-flex justify-content-center align-items-center position-relative">
-					<div class="hover-border"></div>
-					<img class="img_1" src="assets/img/partner/sp2.png" alt="">
-					<img class="img_2 position-absolute" src="assets/img/partner/sp2.1.png" alt="">
-				</div>
-				<div class="vt-client-item d-flex justify-content-center align-items-center position-relative">
-					<div class="hover-border"></div>
-					<img class="img_1" src="assets/img/partner/sp3.png" alt="">
-					<img class="img_2 position-absolute" src="assets/img/partner/sp3.1.png" alt="">
-				</div>
-				<div class="vt-client-item d-flex justify-content-center align-items-center position-relative">
-					<div class="hover-border"></div>
-					<img class="img_1" src="assets/img/partner/sp4.png" alt="">
-					<img class="img_2 position-absolute" src="assets/img/partner/sp4.1.png" alt="">
-				</div>
-				<div class="vt-client-item d-flex justify-content-center align-items-center position-relative">
-					<div class="hover-border"></div>
-					<img class="img_1" src="assets/img/partner/sp5.png" alt="">
-					<img class="img_2 position-absolute" src="assets/img/partner/sp5.1.png" alt="">
-				</div>
-				<div class="vt-client-item d-flex justify-content-center align-items-center position-relative">
-					<div class="hover-border"></div>
-					<img class="img_1" src="assets/img/partner/sp6.png" alt="">
-					<img class="img_2 position-absolute" src="assets/img/partner/sp6.1.png" alt="">
-				</div>
-				<div class="vt-client-item d-flex justify-content-center align-items-center position-relative">
-					<div class="hover-border"></div>
-					<img class="img_1" src="assets/img/partner/sp7.png" alt="">
-					<img class="img_2 position-absolute" src="assets/img/partner/sp7.1.png" alt="">
-				</div>
-				<div class="vt-client-item d-flex justify-content-center align-items-center position-relative">
-					<div class="hover-border"></div>
-					<img class="img_1" src="assets/img/partner/sp8.png" alt="">
-					<img class="img_2 position-absolute" src="assets/img/partner/sp8.1.png" alt="">
-				</div>
-			</div>
-			<div class="vt-btn ver_2 btn-spin text-center mt-40">
-				<a href="#">Browse All Clients</a>
 			</div>
 		</div>
 	</section>		
-<!-- End of Client section
+<!-- End of Contact  section
 	============================================= -->		
 
 
@@ -935,4 +924,4 @@
 	<script src="assets/js/script.js"></script>
 
 </body>
-</html> 		
+</html> 	                                                                                                                                                                   
