--- a/team.html
+++ b/team.html
@@ -906,6 +906,22 @@
 				</div>
 			</div>
 		</div>
+		<div class="vt-team-cta pt-115">
+			<div class="container">
+				<div class="vt-team-cta-content">
+					<div class="vt-section-title text-center ver_2 headline pera-content">
+						<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
+							Join With Us
+						</div>
+						<h2 class="section_title vt-title vt-title-ani">Explore career opportunities with us and join a team dedicated to growth and innovation.</h2>
+						<p>We offer competitive compensation, comprehensive benefits, and a supportive culture that encourages work-life balance.</p>
+					</div>
+					<div class="vt-btn  btn-spin text-center mt-40">
+						<a href="#">View Current Openings</a>
+					</div>
+				</div>
+			</div>
+		</div>
 	</section>		
 <!-- End of Team List  section
 	============================================= -->	
