All Inner Pages
All Inner Pages

--- a/successful.html
+++ b/successful.html
@@ -2,7 +2,7 @@
   <html lang="en">
   <head>
   	<meta charset="UTF-8">
-  	<title>Coming Soon</title>
+  	<title>Mail Send Successfully!</title>
   	<meta name="description" content="Vertexify. - Business Consulting WordPress Theme">
   	<meta name="keywords" content="accountant, advertising, adviser, business, company, consultant, consulting, corporate, finance, financial advisor, human resources, insurance, legal, marketing, multipurpose">
   	<meta name="author" content="Themexriver">
@@ -533,30 +533,112 @@
 <!-- Start of Header section
 	============================================= -->
 
-<!-- Start of Breadcrumb  section
+<!-- Start of Successfull  section
 	============================================= -->
-	<section id="vt-breadcrumb" class="vt-breadcrumb-section position-relative" data-background="assets/img/bg/coming-bg.jpg"> 
-		<div class="vt-vertical-shape-2 txt_item_active">
-			<span></span>
-			<span></span>
-			<span></span>
-		</div>
+	<section id="vt-successfull" class="vt-successfull-section"> 
 		<div class="container">
-			<div class="vt-coming-soon headline pera-content d-flex flex-wrap ul-li-block">
-				<ul class="countdown_timer  clearfix" data-countdown="2024/12/24"></ul>
-				<div class="vt-coming-soon-text headline">
-					<h3>Get ready to discover what's next!</h3>
-					<p>Sign up for updates and be the first to know when we go live. We can't wait to share our new vision with you!</p>
-					<form action="#" method="post">
-						<input type="email" name="email" placeholder="Enter your mail here..."> 
-						<button>Subscribe!</button>
-					</form>
+			<div class="vt-successfull-content text-center headline pera-content">
+				<div class="item-img">
+					<img src="assets/img/about/sent.png" alt="">
+				</div>
+				<div class="item-text">
+					<h3>Thank You!</h3>
+					<p>Thank you for filling out your information! Your submission has been sent. You will be redirected to the homepage shortly.</p>
+					<div class="vt-btn  btn-spin wow fadeInUp"  data-wow-delay="500ms" data-wow-duration="1000ms">
+						<a  href="#">Browse All Services</a>
+					</div>
 				</div>
 			</div>
 		</div>
 	</section>	
-<!-- End of Breadcrumb  section
+<!-- End of Successfull  section
 	============================================= -->
+
+
+<!-- Start of footer  section
+	============================================= -->
+	<footer id="vt-footer" class="vt-footer-section position-relative dark_version">
+		<span class="vt-footer-shape appear_top position-absolute"><img src="assets/img/shape/logo_shape_2.svg" alt=""></span>
+		<div class="container">
+			<div class="vt-footer-content position-relative">
+				<div class="vt-footer-widget-area pt-120 pb-80 d-flex">
+					<div class="vt-footer-widget headline ul-li-block">
+						<div class="logo-widget">
+							<a href="#"><img src="assets/img/logo/logo-2.svg" alt=""></a>
+						</div>
+					</div>
+					<div class="vt-footer-widget white_color headline ul-li-block">
+						<div class="menu-widget">
+							<h3 class="widget-title text-uppercase">Useful Pages</h3>
+							<ul>
+								<li><a href="#">Solutions</a></li>
+								<li><a href="#">About</a></li>
+								<li><a href="#">Blog</a></li>
+								<li><a href="#">Shop</a></li>
+								<li><a href="#">Contact</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="vt-footer-widget white_color headline ul-li-block">
+						<div class="menu-widget">
+							<h3 class="widget-title text-uppercase">Our Services</h3>
+							<ul>
+								<li><a href="#">Strategic Planning</a></li>
+								<li><a href="#">Financial Consulting</a></li>
+								<li><a href="#">Operational Optimization</a></li>
+								<li><a href="#">HR Development</a></li>
+								<li><a href="#">Marketing Strategy</a></li>
+								<li><a href="#">Technology Integration</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="vt-footer-widget white_color headline">
+						<div class="cta-widget">
+							<div class="cta-info d-flex align-items-center">
+								<div class="info-icon d-flex justify-content-center align-items-center">
+									<i class="far fa-phone"></i>
+								</div>
+								<div class="info-text">
+									<span>Have any questions?</span> <a href="#"><span>Free:</span> +1 917 2658444</a>
+								</div>
+							</div>
+							<div class="cta-text">
+								<a href="#"><span>Join Us</span>  to shape the future <i class="fal fa-arrow-right"></i></a>
+							</div>
+						</div>
+					</div>
+					<div class="vt-footer-widget white_color headline">
+						<div class="social-widget">
+							<a href="#"><i class="fab fa-facebook-f"></i></a>
+							<a href="#"><i class="fab fa-instagram"></i></a>
+							<a href="#"><i class="fab fa-linkedin-in"></i></a>
+							<a href="#"><i class="fab fa-dribbble"></i></a>
+						</div>
+					</div>
+				</div>
+				<div class="vt-scrollup white_color position-absolute">
+					<a class="scrollup" href="#"><i class="far fa-arrow-up"></i></a>
+				</div>
+			</div> 
+			<div class="vt-footer-copyright white_color d-flex">
+				<div class="vt-copyright-text">
+					©2024, <a href="#">Vertexify.</a> All Rights Reserved.
+				</div>
+				<div class="vt-copyright-menu ul-li">
+					<ul>
+						<li><a href="#">Privacy Policy</a></li>
+						<li><a href="#">Terms of Service</a></li>
+						<li><a href="#">Legal Info</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</footer>
+<!-- End of footer  section
+	============================================= -->				
+
+
+
 
 
 	<!-- For Js Library -->
@@ -577,11 +659,10 @@
 	<script src="assets/js/jquery.counterup.min.js"></script>
 	<script src="assets/js/waypoints.min.js"></script>
 	<script src="assets/js/lenis.min.js"></script>
-	<script src="assets/js/countdown.js"></script>
 	<script src="assets/js/split-type.min.js"></script>
 	<script src="assets/js/ScrollTrigger.min.js"></script>
 	<script src="assets/js/SplitText.min.js"></script>
 	<script src="assets/js/script.js"></script>
 
 </body>
-</html> 		
+</html> 	
