--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
   <html lang="en">
   <head>
   	<meta charset="UTF-8">
-  	<title>Coming Soon</title>
+  	<title>Contact Page</title>
   	<meta name="description" content="Vertexify. - Business Consulting WordPress Theme">
   	<meta name="keywords" content="accountant, advertising, adviser, business, company, consultant, consulting, corporate, finance, financial advisor, human resources, insurance, legal, marketing, multipurpose">
   	<meta name="author" content="Themexriver">
@@ -533,30 +533,327 @@
 <!-- Start of Header section
 	============================================= -->
 
-<!-- Start of Breadcrumb  section
+<!-- Start of Google Map  section
 	============================================= -->
-	<section id="vt-breadcrumb" class="vt-breadcrumb-section position-relative" data-background="assets/img/bg/coming-bg.jpg"> 
+	<section id="vt-google-map" class="vt-google-map-section position-relative">
 		<div class="vt-vertical-shape-2 txt_item_active">
 			<span></span>
 			<span></span>
 			<span></span>
 		</div>
+		<div class="vt-contact-map">
+			<iframe class="map" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d6209.242755903148!2d-77.04363602434464!3d38.90977276948481!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1394992895496"  height="850" width="100%"></iframe>
+		</div> 
+		<div class="">
+			
+		</div>
+	</section>	
+<!-- Start of Google Map  section
+	============================================= -->
+
+<!-- Start of Contact form  section
+	============================================= -->
+	<section id="vt-contact-form" class="vt-contact-form-section pt-115">
 		<div class="container">
-			<div class="vt-coming-soon headline pera-content d-flex flex-wrap ul-li-block">
-				<ul class="countdown_timer  clearfix" data-countdown="2024/12/24"></ul>
-				<div class="vt-coming-soon-text headline">
-					<h3>Get ready to discover what's next!</h3>
-					<p>Sign up for updates and be the first to know when we go live. We can't wait to share our new vision with you!</p>
-					<form action="#" method="post">
-						<input type="email" name="email" placeholder="Enter your mail here..."> 
-						<button>Subscribe!</button>
-					</form>
+			<div class="vt-contact-content  d-flex">
+				<div class="vt-contact-text-wrap page_version">
+					<div class="vt-section-title ver_2 headline pera-content vt-text">
+						<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
+							Connect with Us
+						</div>
+						<h2 class="section_title vt-title vt-title-ani">Fill Out Our Corporate Business Contact with us Today</h2>
+						<p>Have questions or need assistance? Fill out the contact form, and our dedicated team will get back to you as soon as possible. We're here to help!</p>
+					</div>
+				</div>
+				<div class="vt-contact-form page_version headline pera-content">
+					<h3 class="wow" data-splitting="" >What can we help you with? </h3>
+					<div class="vt-contact-form-area">
+						<form action="#" method="post">
+							<div class="vt-contact-form-option">
+								<label class="contact-select">
+									<input type="radio" id="age1" name="age" value="">
+									<span>Strategic Planning</span>
+								</label>
+								<label class="contact-select">
+									<input type="radio" id="age2" name="age" value="">
+									<span>Financial Consulting</span>
+								</label> 
+								<label class="contact-select">
+									<input type="radio" id="age3" name="age" value="">
+									<span>Operational Optimization</span>
+								</label>
+								<label class="contact-select">
+									<input type="radio" id="age4" name="age" value="">
+									<span>HR Development</span>
+								</label>
+								<label class="contact-select">
+									<input type="radio" id="age5" name="age" value="">
+									<span>Marketing Strategy</span>
+								</label>
+								<label class="contact-select">
+									<input type="radio" id="age6" name="age" value="">
+									<span>Technology Integration</span>
+								</label>
+							</div>
+							<div class="vt-contact-form-input">
+								<div class="input-field">
+									<label class="f-lebel text-uppercase">Name</label>
+									<input type="text" placeholder="e.g. Oliver Spiteri">
+								</div>
+								<div class="input-field">
+									<label class="f-lebel text-uppercase">Phone</label>
+									<input type="text" placeholder="e.g. +1 877 217 8371">
+								</div>
+								<div class="input-field">
+									<label class="f-lebel text-uppercase">Email</label>
+									<input type="text" placeholder="example@email.com">
+								</div>
+								<div class="input-field">
+									<label class="f-lebel text-uppercase">Message</label>
+									<textarea name="message" id="text" placeholder="Write your message here..."></textarea>
+								</div>
+							</div>
+							<button>Submit NOw</button>
+						</form>
+					</div>
 				</div>
 			</div>
 		</div>
 	</section>	
-<!-- End of Breadcrumb  section
+<!-- End of Contact form  section
 	============================================= -->
+
+<!-- Start of office feed  section
+	============================================= -->
+	<section id="vt-office-feed" class="vt-office-feed-section position-relative pt-120 pb-120">
+		<div class="contact-pattern position-absolute">
+			<img src="assets/img/bg/pattern.png" alt="">
+		</div>
+		<div class="container">
+			<div class="vt-section-title ver_2 headline pera-content">
+				<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
+					Our Global Presence
+				</div>
+				<h2 class="section_title vt-title vt-title-ani">Global Offices: Our Corporate Business Locations Overview</h2>
+				<p>Our global network includes offices in key cities, offering localized expertise and comprehensive support tailored to each region. This strategic presence ensures we deliver exceptional service and solutions to meet diverse business needs.</p>
+			</div>
+			<div class="vt-office-feed-content pt-50">
+				<div class="row justify-content-center">
+					<div class="col-lg-4">
+						<div class="vt-office-feed-item">
+							<div class="item-img">
+								<img src="assets/img/about/of1.jpg" alt="">
+							</div>
+							<div class="item-text headline">
+								<h2>Vertexify: United States</h2>
+								<div class="item-info headline">
+									<h3>Address:</h3>
+									<span>129 9th St, Brooklyn, NY 11215, United States</span>
+								</div>
+								<div class="item-info headline">
+									<h3>Hours:</h3>
+									<span>Monday to Friday from 9:00 to 17:00</span>
+								</div>
+								<div class="item-info headline">
+									<h3>Phone:</h3>
+									<span>+1 347-335-0751</span>
+								</div>
+								<div class="item-info headline">
+									<h3>Email:</h3>
+									<span>example@email.com</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4">
+						<div class="vt-office-feed-item">
+							<div class="item-img">
+								<img src="assets/img/about/of2.jpg" alt="">
+							</div>
+							<div class="item-text headline">
+								<h2>Vertexify: United Kingdom</h2>
+								<div class="item-info headline">
+									<h3>Address:</h3>
+									<span>Unit 19, Silver Wing Industrial Estate, Horatius Way, Croydon CR0 4RU, United Kingdom</span>
+								</div>
+								<div class="item-info headline">
+									<h3>Hours:</h3>
+									<span>Monday to Friday from 9:00 to 17:00</span>
+								</div>
+								<div class="item-info headline">
+									<h3>Phone:</h3>
+									<span>+44 20 3417 5360</span>
+								</div>
+								<div class="item-info headline">
+									<h3>Email:</h3>
+									<span>example@email.com</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4">
+						<div class="vt-office-feed-item">
+							<div class="item-img">
+								<img src="assets/img/about/of3.jpg" alt="">
+							</div>
+							<div class="item-text headline">
+								<h2>Vertexify: Australia</h2>
+								<div class="item-info headline">
+									<h3>Address:</h3>
+									<span>30 Little La Trobe St,
+									Melbourne VIC 3000, Australia</span>
+								</div>
+								<div class="item-info headline">
+									<h3>Hours:</h3>
+									<span>Monday to Friday from 9:00 to 17:00</span>
+								</div>
+								<div class="item-info headline">
+									<h3>Phone:</h3>
+									<span>+61 3 9650 9888</span>
+								</div>
+								<div class="item-info headline">
+									<h3>Email:</h3>
+									<span>example@email.com</span>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="vt-btn ver_2 btn-spin text-center mt-20">
+					<a href="#">Load More Locations</a>
+				</div>
+			</div>
+		</div>
+	</section>	
+<!-- End of office feed  section
+	============================================= -->		
+
+
+<!-- Start of Get in touch  section
+	============================================= -->
+	<section id="vt-get-in-touch" class="vt-get-in-touch-section position-relative" data-background="assets/img/bg/get-bg.jpg">
+		<div class="vt-get-in-shape-1 anim_left position-absolute"></div>
+		<div class="vt-get-in-shape-2 anim_right position-absolute"></div>
+		<div class="contact-pattern position-absolute">
+			<img src="assets/img/bg/pattern.png" alt="">
+		</div>
+		<div class="container">
+			<div class="vt-get-in-touch-wrap appear_top">
+				<div class="vt-section-title ver_2 headline text-center pera-content">
+					<div class="subtitle wow fadeInRight"  data-wow-delay="400ms" data-wow-duration="1000ms">
+						Get in Touch
+					</div>
+					<h2 class="section_title vt-title vt-title-ani">Interested in working together?</h2>
+				</div>
+				<div class="vt-get-in-touch-content  d-flex justify-content-center text-center flex-wrap">
+					<div class="vt-get-in-touch-item headline pera-content">
+						<h3>Address:</h3>
+						<p>327 Park Ave S,
+						New York, NY 10010</p>
+					</div>
+					<div class="vt-get-in-touch-item headline pera-content">
+						<h3>Hours:</h3>
+						<p>Mon-Fri: 9 AM to 5 PM
+						Sun: Closed</p>
+					</div>
+					<div class="vt-get-in-touch-item headline pera-content">
+						<h3>Phone:</h3>
+						<p>+1 917 265 8444</p>
+					</div>
+				</div>
+				<div class="vt-btn mt-35 btn-spin text-center">
+					<a href="#">Free Consultation</a>
+				</div>
+			</div> 
+		</div>
+	</section>		
+<!-- End of Get in touch  section
+	============================================= -->
+
+<!-- Start of footer  section
+	============================================= -->
+	<footer id="vt-footer" class="vt-footer-section position-relative dark_version">
+		<span class="vt-footer-shape appear_top position-absolute"><img src="assets/img/shape/logo_shape_2.svg" alt=""></span>
+		<div class="container">
+			<div class="vt-footer-content position-relative">
+				<div class="vt-footer-widget-area pt-120 pb-80 d-flex">
+					<div class="vt-footer-widget headline ul-li-block">
+						<div class="logo-widget">
+							<a href="#"><img src="assets/img/logo/logo-2.svg" alt=""></a>
+						</div>
+					</div>
+					<div class="vt-footer-widget white_color headline ul-li-block">
+						<div class="menu-widget">
+							<h3 class="widget-title text-uppercase">Useful Pages</h3>
+							<ul>
+								<li><a href="#">Solutions</a></li>
+								<li><a href="#">About</a></li>
+								<li><a href="#">Blog</a></li>
+								<li><a href="#">Shop</a></li>
+								<li><a href="#">Contact</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="vt-footer-widget white_color headline ul-li-block">
+						<div class="menu-widget">
+							<h3 class="widget-title text-uppercase">Our Services</h3>
+							<ul>
+								<li><a href="#">Strategic Planning</a></li>
+								<li><a href="#">Financial Consulting</a></li>
+								<li><a href="#">Operational Optimization</a></li>
+								<li><a href="#">HR Development</a></li>
+								<li><a href="#">Marketing Strategy</a></li>
+								<li><a href="#">Technology Integration</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="vt-footer-widget white_color headline">
+						<div class="cta-widget">
+							<div class="cta-info d-flex align-items-center">
+								<div class="info-icon d-flex justify-content-center align-items-center">
+									<i class="far fa-phone"></i>
+								</div>
+								<div class="info-text">
+									<span>Have any questions?</span> <a href="#"><span>Free:</span> +1 917 2658444</a>
+								</div>
+							</div>
+							<div class="cta-text">
+								<a href="#"><span>Join Us</span>  to shape the future <i class="fal fa-arrow-right"></i></a>
+							</div>
+						</div>
+					</div>
+					<div class="vt-footer-widget white_color headline">
+						<div class="social-widget">
+							<a href="#"><i class="fab fa-facebook-f"></i></a>
+							<a href="#"><i class="fab fa-instagram"></i></a>
+							<a href="#"><i class="fab fa-linkedin-in"></i></a>
+							<a href="#"><i class="fab fa-dribbble"></i></a>
+						</div>
+					</div>
+				</div>
+				<div class="vt-scrollup white_color position-absolute">
+					<a class="scrollup" href="#"><i class="far fa-arrow-up"></i></a>
+				</div>
+			</div> 
+			<div class="vt-footer-copyright white_color d-flex">
+				<div class="vt-copyright-text">
+					©2024, <a href="#">Vertexify.</a> All Rights Reserved.
+				</div>
+				<div class="vt-copyright-menu ul-li">
+					<ul>
+						<li><a href="#">Privacy Policy</a></li>
+						<li><a href="#">Terms of Service</a></li>
+						<li><a href="#">Legal Info</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</footer>
+<!-- End of footer  section
+	============================================= -->				
+
+
+
 
 
 	<!-- For Js Library -->
@@ -577,7 +874,6 @@
 	<script src="assets/js/jquery.counterup.min.js"></script>
 	<script src="assets/js/waypoints.min.js"></script>
 	<script src="assets/js/lenis.min.js"></script>
-	<script src="assets/js/countdown.js"></script>
 	<script src="assets/js/split-type.min.js"></script>
 	<script src="assets/js/ScrollTrigger.min.js"></script>
 	<script src="assets/js/SplitText.min.js"></script>
